fixing safari overflowing bio content even though it doesnt make sense for it to overflow closes #4255

--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -25,6 +25,9 @@
   align-content: center;
   height: 100%;
   display: grid;
+  .content {
+    display: grid; //stupid fix for stupid safari
+  }
   .preloader {
     position: absolute;
     z-index: 1;
